--- a/app/resources/views/base.html.twig
+++ b/app/resources/views/base.html.twig
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/build/css/site.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body class="bg-grey-lightest text-grey-darker font-sans">
+    <body class="bg-grey-lightest leading-tight text-grey-darker font-sans">
         {% include "partials/header.html.twig" %}
 
         {% block content_top %}{% endblock %}
